2000-05-30  Kalle Marjola <rpr@wapit.com>

	* gw/numhash.h|c: exported numhash from old smsgateway and edited
	it to work with new http2 and Octstrings, plus removed some
	functions. Next: implement white/black-list

2000-05-29  Richard Braakman  <dark@wapit.com>

	* gw/smsbox_req.c: Fixed silly mistake.

2000-05-29  Richard Braakman  <dark@wapit.com>

	* gwlib/conn.c: Implemented conn_read_packet().

2000-05-29  Richard Braakman  <dark@wapit.com>

	* gw/bb_boxc.c: If listening socket cannot be opened, handle it
	by panicking rather than segfaulting.

2000-05-29  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: #ifdefs added to supprt libxml2. Does compile, 
	but does not work with it, yet. WapIT -> Wapit

	* gw/wml_definitions.h: WapIT -> Wapit

	* gw/wml_compiler.h: WapIT -> Wapit

	* configure.in: libxml2 added.

2000-05-29  Richard Braakman  <dark@wapit.com>

	* gw/smsc.c: Made bearerbox not crash if "smsc" field is missing
	from smsc config.

	* gwlib/gwthread-pthread.c: Comment around previous change was
	inaccurate; it was an fd leak on Linux too.

2000-05-29  Derry Hamilton  <rasilon@tardis.ed.ac.uk>

	* gwlib/gwthread-pthread.c: Added some system cleanups to 
	delete_threadinfo.  Threads are not always processes!

2000-05-29    Kalle Marjola <rpr@wapit.com>
	
	* gw/bb_boxc.c: fixed possible problem in box shutdown and added
	multiple wapbox routing. It is, however, not done according to
	load levels, just random distribution. Load balancing later.

2000-05-29  Richard Braakman  <dark@wapit.com>

	* test/fakewap.c: Use gwthread_join_all to wait for client threads
	to terminate.

2000-05-29  Richard Braakman  <dark@wapit.com>

	* gwlib/gwthread-pthread.c: In new_thread, free its argument a bit
	earlier, to avoid a race with gw_check_leaks.  (This caused seemingly
	random memory leak reports).

	* gwlib/conn.c: Use gwthread_pollfd instead of calling poll directly.

2000-05-29  Richard Braakman  <dark@wapit.com>
